--- a/CheatCodes.css
+++ b/CheatCodes.css
@@ -12,7 +12,7 @@
 [layer-id="user-settings"] [href="https://github.com/Jiiks/"] {
     font-size: 0px;
 }
-[layer-id="user-settings"] [href="https://github.com/WapourVave/"]:after {
+[layer-id="user-settings"] [href="https://github.com/Jiiks/"]:after {
     font-size: 12px!important;
     content: "Wapour Vave";
     color:#FF0080!important;
