--- a/AutoUpdates.css
+++ b/AutoUpdates.css
@@ -5,4 +5,4 @@
   ------------------------*/
   
   /* Auto Updates: */
-  @import url(https://raw.githubusercontent.com/WapourVave/BetterDiscordCSS/master/CheatCodes.css);
+  @import url(https://rawgit.com/WapourVave/BetterDiscordCSS/master/CheatCodes.css);
