--- a/CheatCodes.css
+++ b/CheatCodes.css
@@ -1336,7 +1336,7 @@ body .container-iksrDt .accountDetails-15i-_e .discriminator {
 
 /* -- HypeSquad Members */
 /* Kaden */
-.user-popout .avatar-popout[style*="212642964026032130"]>.status:after {content: url("https://b1nzy.ratelimited.me/u/f6a842.png");}
+.user-popout .avatar-popout[style*="212642964026032130"]>.status:after {content: url("https://my-dad.will-never-love.me/21c81e.png");}
 .user-popout .avatar-popout[style*="212642964026032130"]>.status:hover::before {
     content: "Verified by Wapour Vave #1388";
     width: 53px;
