Update and rename Badges+NameTags.theme.css to BetterDiscordBadges+NameTags.theme.css

--- a/Themes/BetterDiscordBadges+NameTags.theme.css
+++ b/Themes/BetterDiscordBadges+NameTags.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Discord Badges + NameTags","description":"Adds Badges and Name Tags to users on Discord! Contact Wapour Vave#1388 on Discord to have new users added!","author":"Wapour Vave#1388","version":"0.1.0"}*//{}
+//META{"name":"BetterDiscord Badges + NameTags","description":"Adds Badges and Name Tags to users on Discord! Contact Wapour Vave#1388 on Discord to have new users added!","author":"Wapour Vave#1388","version":"0.1.0"}*//{}
 
 /*-----------------------------------
   -----------------------------------
