Profile Bot Tag looks better now

--- a/Src/DiscordNameTags.css
+++ b/Src/DiscordNameTags.css
@@ -24,7 +24,7 @@
 /* Global Bot Tag Profile */
 .bot-tag.bot-tag-invert {
     background: #708fff;
-    color: #FFFFFF!important;
+    color: #000!important;
 }
 
 /* Rainbow  */
